updated home page

--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
     <header>
@@ -14,14 +14,16 @@
         </div>
         <nav id="pages">
             <ul>
-                <li><a href="" class="nav-link">Deals</a></li>
-                <li><a href="" class="nav-link">Trips</a></li>
-                <li><a href="" class="nav-link">Cart</a></li>
+                <li><a href="" class="nav-link">Regions</a></li>
+                <li><a href="" class="nav-link">Countries</a></li>
             </ul>
         </nav>
         <div id="profile">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQwvGWjwjiCh8UCmLjeDGBj9iIZt7cyiynfwnYz_63_hg&s" alt="Profile Picture" id="profile-picture" style="border-radius: 50%;height: 30px;width: 30px;">
-            <span id="profile-nav"><a href="">Profile</a></span>
+            <ul>
+                <li><a href="login.html" class="nav-link" id="login">Login</a></li>
+                <li><a href="register.html" class="nav-link"id="register">Register</a></li>
+            </ul>
+            
         </div>
 
     </header>
