updated home page

--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -1,36 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/css/index.css">
-</head>
-<body>
-    <header>
-        <div id="logo">
-            <img src="https://cdn.dribbble.com/users/118116/screenshots/4367701/media/de867e44df8f2cf43e9460f5c4e4690c.png?resize=800x600&vertical=center" alt="Logo Picture" style="border-radius: 50%; height:60px;" id="logo-picture">
-            <h2 id="site-name">Justin Travels.</h2>
+    <div class="container">
+        <div class="carousel">
+            <div class="slider">
+                <section class="popular-regions" id="europe">
+                    <h1>Europe</h1>
+                    <button>Select</button>
+                </section>
+                <section class="popular-regions" id="asia">
+                    <h1>Asia</h1>
+                    <button>Select</button>
+                </section>
+                <section class="popular-regions" id="oceania">
+                    <h1>Oceania</h1>
+                    <button>Select</button>
+                </section>
+                <section class="popular-regions" id="na">
+                    <h1>North America</h1>
+                    <button>Select</button>
+                </section>
+            </div>
+            <div class="controls">
+                <span class="material-symbols-outlined arrow left">arrow_back_ios</span>
+                <span class="material-symbols-outlined arrow right">arrow_forward_ios</span>
+            </div>
         </div>
-        <nav id="pages">
-            <ul>
-                <li><a href="" class="nav-link">Regions</a></li>
-                <li><a href="" class="nav-link">Countries</a></li>
-            </ul>
-        </nav>
-        <div id="profile">
-            <ul>
-                <li><a href="login.html" class="nav-link" id="login">Login</a></li>
-                <li><a href="register.html" class="nav-link"id="register">Register</a></li>
-            </ul>
-            
-        </div>
-
-    </header>
-    <section id="popular">
-        
-    </section>
-    
-    <script src="index.js"></script>
-</body>
-</html>
+    </div>
