--- a/views/layouts/home.handlebars
+++ b/views/layouts/home.handlebars
@@ -92,33 +92,11 @@
             </form>
         </div>
     </div>
- 
-    <div class="container">
-        <div class="carousel">
-            <div class="slider">
-                <section class="popular-regions" id="europe">
-                    <h1>Europe</h1>
-                    <button>Select</button>
-                </section>
-                <section class="popular-regions" id="asia">
-                    <h1>Asia</h1>
-                    <button>Select</button>
-                </section>
-                <section class="popular-regions" id="oceania">
-                    <h1>Oceania</h1>
-                    <button>Select</button>
-                </section>
-                <section class="popular-regions" id="na">
-                    <h1>North America</h1>
-                    <button>Select</button>
-                </section>
-            </div>
-            <div class="controls">
-                <span class="material-symbols-outlined arrow left">arrow_back_ios</span>
-                <span class="material-symbols-outlined arrow right">arrow_forward_ios</span>
-            </div>
-        </div>
+    <div>
+        {{{body}}}
     </div>
+
+
     
     <footer>
         <p class="footer-items" id="footer-title">My Links...</p>
