--- a/views/layouts/home.handlebars
+++ b/views/layouts/home.handlebars
@@ -8,101 +8,17 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 <body>
-    <header>
-        <div id="logo">
-            <img src="https://cdn.dribbble.com/users/118116/screenshots/4367701/media/de867e44df8f2cf43e9460f5c4e4690c.png?resize=800x600&vertical=center" alt="Logo Picture" style="border-radius: 50%; height:60px;" id="logo-picture">
-            <h2 id="site-name">Justin Travels.</h2>
-        </div>
-        <nav id="pages">
-            <ul>
-                <li><a href="" class="nav-link">Regions</a></li>
-                <li><a href="" class="nav-link">Countries</a></li>
-            </ul>
-        </nav>
-        <div class="right-nav">
-            <div class="profile">
-                <ul>
-                    <li><a class="nav-link" id="login">Login</a></li>
-                    <li><a class="nav-link"id="register">Register</a></li>
-                </ul>
-                
-            </div>
-            <div class="search">
-                <form action="" class="search">
-                    <input type="text" id="search-bar" placeholder="Search...">
-                    <span class="material-symbols-outlined search-icon">search</span>
-                </form>
-            </div>
-        </div>
 
-    </header>
-        <div class="wrapper">
-        <span class="icon-close material-symbols-outlined">close</span>
-        <div class="form-box login">
-            <h2>Login</h2>
-            <form action="">
-                <div class="input-box">
-                    <span class="icon material-symbols-outlined">mail</span>
-                    <input type="email" required>
-                    <label for="email">Email</label>
-                </div>
-                <div class="input-box">
-                    <span class="icon material-symbols-outlined">lock</span>
-                    <input type="password" required>
-                    <label for="password">Password</label>
-                </div>
-                <button type="submit" class="form-button">Login</button>
-                <div class="login-register">
-                    <p>Don't have an account? <a class="register-link">Register</a></p>
-                </div>
-            </form>
-        </div>
-        <div class="form-box register">
-            <h2>Register</h2>
-            <form action="">
-                <div class="input-box">
-                    <span class="icon material-symbols-outlined">person</span>
-                    <input type="text" required>
-                    <label for="firstname">First Name</label>
-                </div>
-                <div class="input-box">
-                    <span class="icon material-symbols-outlined">person</span>
-                    <input type="text" required>
-                    <label for="lastname">Last Name</label>
-                </div>
-                <div class="input-box">
-                    <span class="icon material-symbols-outlined">person</span>
-                    <input type="text" required>
-                    <label for="username">Username</label>
-                </div>
-                <div class="input-box">
-                    <span class="icon material-symbols-outlined">mail</span>
-                    <input type="email" required>
-                    <label for="email">Email</label>
-                </div>
-                <div class="input-box">
-                    <span class="icon material-symbols-outlined">lock</span>
-                    <input type="password" required>
-                    <label for="password">Password</label>
-                </div>
-                <button type="submit" class="form-button">Register</button>
-                <div class="login-register">
-                    <p>Have an account? <a class="login-link">Login</a></p>
-                </div>
-            </form>
-        </div>
-    </div>
+{{> home/home-header}}
+{{> home/home-login-register}}
+
     <div>
         {{{body}}}
     </div>
 
 
-    
-    <footer>
-        <p class="footer-items" id="footer-title">My Links...</p>
-        <p class="footer-items">Linked in:</p><img src="/css/linkedIn.png" alt="linked-in link" id="linked-in">
-        <p class="footer-items">Git-Hub:</p><img src="/css/github.png" alt="git-hub link" id="git-hub">
-    </footer>
+    {{> home/home-footer}}
+
     <script src="/js/index.js"></script>
 </body>
 </html>
