--- a/views/partials/home/home-login-register.handlebars
+++ b/views/partials/home/home-login-register.handlebars
@@ -2,7 +2,7 @@
     <span class="icon-close material-symbols-outlined">close</span>
     <div class="form-box login">
         <h2>Login</h2>
-        <form action="">
+        <form action="/">
             <div class="input-box">
                 <span class="icon material-symbols-outlined">mail</span>
                 <input type="email" required>
@@ -21,30 +21,30 @@
     </div>
     <div class="form-box register">
         <h2>Register</h2>
-        <form action="">
+        <form action="/" method="post">
             <div class="input-box">
                 <span class="icon material-symbols-outlined">person</span>
-                <input type="text" required>
+                <input type="text" name="firstName" required>
                 <label for="firstname">First Name</label>
             </div>
             <div class="input-box">
                 <span class="icon material-symbols-outlined">person</span>
-                <input type="text" required>
+                <input type="text" name="lastName" required>
                 <label for="lastname">Last Name</label>
             </div>
             <div class="input-box">
                 <span class="icon material-symbols-outlined">person</span>
-                <input type="text" required>
+                <input type="text" required name="userName">
                 <label for="username">Username</label>
             </div>
             <div class="input-box">
                 <span class="icon material-symbols-outlined">mail</span>
-                <input type="email" required>
+                <input type="email" required name="email">
                 <label for="email">Email</label>
             </div>
             <div class="input-box">
                 <span class="icon material-symbols-outlined">lock</span>
-                <input type="password" required>
+                <input type="password" required name="password">
                 <label for="password">Password</label>
             </div>
             <button type="submit" class="form-button">Register</button>
