--- a/views/layouts/user.handlebars
+++ b/views/layouts/user.handlebars
@@ -8,13 +8,14 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 <body>
+{{> user/user-header}}
 
-{{> home/home-header}}
+    <div>
+        {{{body}}}
+    </div>
 
-    {{{body}}}
 
-{{> home/home-footer}}
-
-    <script src="/js/index.js"></script>
+    {{> user/user-footer}}
+    <script src="/js/user.js"></script>
 </body>
 </html>
