--- a/views/partials/home/home-login-register.handlebars
+++ b/views/partials/home/home-login-register.handlebars
@@ -2,15 +2,15 @@
     <span class="icon-close material-symbols-outlined">close</span>
     <div class="form-box login">
         <h2>Login</h2>
-        <form action="/">
+        <form action="/login" method="post">
             <div class="input-box">
                 <span class="icon material-symbols-outlined">mail</span>
-                <input type="email" required>
+                <input type="email" required name="email">
                 <label for="email">Email</label>
             </div>
             <div class="input-box">
                 <span class="icon material-symbols-outlined">lock</span>
-                <input type="password" required>
+                <input type="password" required name="password">
                 <label for="password">Password</label>
             </div>
             <button type="submit" class="form-button">Login</button>
@@ -21,7 +21,7 @@
     </div>
     <div class="form-box register">
         <h2>Register</h2>
-        <form action="/" method="post">
+        <form action="/register" method="post">
             <div class="input-box">
                 <span class="icon material-symbols-outlined">person</span>
                 <input type="text" name="firstName" required>
