--- a/views/partials/user/user-header.handlebars
+++ b/views/partials/user/user-header.handlebars
@@ -5,15 +5,15 @@
         </div>
         <nav id="pages">
             <ul>
-                <li><a href="/regions" class="nav-link">Regions</a></li>
-                <li><a href="/countries" class="nav-link">Countries</a></li>
+                <li><a href="/user/regions" class="nav-link">Regions</a></li>
+                <li><a href="/user/countries" class="nav-link">Countries</a></li>
             </ul>
         </nav>
         <div class="right-nav">
             <div class="profile">
                 <ul>
-                    <li><a class="nav-link" id="login" href="/login">Login</a></li>
-                    <li><a class="nav-link"id="register" href="/register">Register</a></li>
+                    <li><a class="nav-link" id="login" href="/logout">Logout</a></li>
+                    <li><a class="nav-link" id="login" href="/user/myposts">{{#if user}}{{user.firstName}}{{/if}}'s Posts</a></li>
                 </ul>
                 
             </div>
