--- a/views/user/user-countries.handlebars
+++ b/views/user/user-countries.handlebars
@@ -1,1 +1,9 @@
-<h1>User Countries</h1>
+<h1 id="countries-header">Countries</h1>
+
+<div class="countries">
+    <ul class="countries-list">
+        {{#each data}}
+        <li class="countries-name"><a href="/countries/{{_id}}" class="countries-link">{{name}}</a></li>
+        {{/each}}
+    </ul>
+</div>
