--- a/views/home/countries.handlebars
+++ b/views/home/countries.handlebars
@@ -1,1 +1,9 @@
-<h1>Countries</h1>
+<h1 id="countries-header">Countries</h1>
+
+<div class="countries">
+    <ul class="countries-list">
+        {{#each data}}
+        <li class="countries-name"><a href="/countries/{{name}}" class="countries-link">{{name}}</a></li>
+        {{/each}}
+    </ul>
+</div>
