--- a/views/home/countries.handlebars
+++ b/views/home/countries.handlebars
@@ -3,7 +3,7 @@
 <div class="countries">
     <ul class="countries-list">
         {{#each data}}
-        <li class="countries-name"><a href="/countries/{{name}}" class="countries-link">{{name}}</a></li>
+        <li class="countries-name"><a href="/cities/{{name}}" class="countries-link">{{name}}</a></li>
         {{/each}}
     </ul>
 </div>
