--- a/views/user/user-regions.handlebars
+++ b/views/user/user-regions.handlebars
@@ -2,7 +2,7 @@
 <div class="regions">
     <ul class="regions-list">
     {{#each data}}
-        <li class="region-name"><a href="/regions{{_id}}" class="region-link">{{name}}</a></li>
+        <li class="region-name"><a href='/user/countries/{{name}}' class="region-link">{{name}}</a></li>
     {{/each}}
     </ul>
 </div>
