--- a/views/partials/user/user-header.handlebars
+++ b/views/partials/user/user-header.handlebars
@@ -5,8 +5,8 @@
         </div>
         <nav id="pages">
             <ul>
-                <li><a href="/user/regions" class="nav-link">Regions</a></li>
                 <li><a href="/user/countries" class="nav-link">Countries</a></li>
+                <li><a href="/user/cities" class="nav-link">Cities</a></li>
             </ul>
         </nav>
         <div class="right-nav">
@@ -19,7 +19,7 @@
             </div>
             <div class="search">
                 <form action="" class="search">
-                    <input type="text" id="search-bar" placeholder="Search...">
+                    <input type="text" id="search-bar" placeholder="Search cities...">
                     <span class="material-symbols-outlined search-icon">search</span>
                 </form>
             </div>
