--- a/views/user/user-countries.handlebars
+++ b/views/user/user-countries.handlebars
@@ -3,7 +3,7 @@
 <div class="countries">
     <ul class="countries-list">
         {{#each data}}
-        <li class="countries-name"><a href="/countries/{{_id}}" class="countries-link">{{name}}</a></li>
+        <li class="countries-name"><a href="/user/cities/{{name}}" class="countries-link">{{name}}</a></li>
         {{/each}}
     </ul>
 </div>
