--- a/public/css/index.css
+++ b/public/css/index.css
@@ -560,3 +560,111 @@ body .wrapper{
     justify-content: center;
     margin: 40px 0 40px 0;
 }
+.createPostBtn{
+    height: 50px;
+    width: 120px;
+    border: solid black 2px;
+    background-color: #00ABE4;
+    color: white;
+    font-size: 15px;
+    font-weight: 600;
+    cursor: pointer;
+    margin-left: 10%;
+    margin-bottom: 50px;
+    transition: ease 0.5s box-shadow;
+}
+.createPostBtn:hover{
+    box-shadow: black 1px 1px 1px;
+}
+.createPostForm{
+    display: grid;
+    grid-template-rows: 80px 500px;
+    grid-template-columns: 10% 80%;
+    border: black solid 2px;  
+    margin: 0 5% 100px 5%;
+    grid-gap: 20px;
+    box-shadow: black 4px 4px 5px;
+}
+
+.formLabel{
+    grid-column: 1 / 3;
+    grid-row: 1 / 1;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    margin-left: 5%;
+    margin-top: 20px;
+}
+.form{
+    grid-row: 2 / 3;
+    grid-column: 1 / 3;
+    display: grid;
+    grid-template-columns: 15% 80%;
+    grid-template-rows: 8% 60% 20%;
+    grid-gap: 20px;
+    margin-left: 10%;
+
+}
+.locationDetailsInput{
+    padding: 8px;
+    margin-bottom: 20px;
+    font-size: 15px;
+    border: black 2px solid;
+}
+.locationNameLabel, .locationDetailsLabel, .cityLabel{
+    font-weight: 500;
+    width: 100%;
+    height: 100%;
+    right: 0;
+    display: flex;
+    justify-content: right;
+
+}
+.locationNameInput{
+    padding: 0 5px;
+    margin-bottom: 20px;
+    height: 100%;
+    width: 40%;
+    font-size: 15px;
+    border: black 2px solid;
+}
+.submitBtn{
+    margin-bottom: 20px;
+    width: 800px;
+    margin-left: 100%;
+    margin-right: 10%;
+    background-color: #00ABE4;
+    color: white;
+    font-size: 20px;
+    font-weight: 500;
+    cursor: pointer;
+}
+.submitBtn:hover{
+    box-shadow: black 2px 2px 3px ;
+}
+.createPostFormWithCity{
+    display: grid;
+    grid-template-rows: 80px 500px;
+    grid-template-columns: 10% 80%;
+    border: black solid 2px;  
+    margin: 0 5% 100px 5%;
+    grid-gap: 20px;
+    box-shadow: black 4px 4px 5px;
+}
+.formWithCity{
+    grid-row: 2 / 4;
+    grid-column: 1 / 3;
+    display: grid;
+    grid-template-columns: 15% 80%;
+    grid-template-rows: 10% 10% 50% 15%;
+    grid-gap: 20px;
+    margin-left: 10%;
+}
+.cityInput{
+    width: 40%;
+    border: black solid 2px;
+}
+
+
+
+
