--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -40,3 +40,24 @@
             </div>
         </div>
     </div>
+    <div class="recentPosts">
+        <div class="posts">
+            <h1>Recent Posts</h1>
+            {{#if recentPosts}}
+                {{#each recentPosts}}
+
+                    <div class="post">
+                        <div class="item like"><span class="likeIcon material-symbols-outlined">thumb_up</span></div>
+                        <div class="item likeCount">{{likeCount}}</div>
+                        <div class="item dislike"><span class="dislikeIcon material-symbols-outlined">thumb_down</span></div>
+                        <div class="item username">Created by {{userName}}</div>
+                        <div class="item locationName">{{locationName}}, {{city}}</div>
+                        <div class="item locationDetails">{{locationDetails}}</div>
+                    </div>
+                {{/each}}
+            {{else}}
+                <p style="margin-bottom: 100px; display: flex; width: 100%; justify-content: center">No Posts to show</p>
+            {{/if}}
+
+        </div>
+    </div>
