--- a/views/partials/home/home-header.handlebars
+++ b/views/partials/home/home-header.handlebars
@@ -18,11 +18,12 @@
                 
             </div>
             <div class="search">
-                <form action="" class="search">
-                    <input type="text" id="search-bar" placeholder="Search cities...">
-                    <span class="material-symbols-outlined search-icon">search</span>
+                <form action="/search" class="search" method="GET">
+                    <input type="text" id="search-bar" placeholder="Search cities..." name="term" required>
+                    <button type="submit" style="background: transparent; border: none"><span class="material-symbols-outlined search-icon">search</span></button>
                 </form>
             </div>
         </div>
 
     </header>
+    
