--- a/views/user/user-myposts.handlebars
+++ b/views/user/user-myposts.handlebars
@@ -10,10 +10,16 @@
                 <div class="item like"><span class="likeIcon material-symbols-outlined">thumb_up</span></div>
                 <div class="item likeCount">{{likeCount}}</div>
                 <div class="item dislike"><span class="dislikeIcon material-symbols-outlined">thumb_down</span></div>
-                <div class="item username">Created by {{userName}}</div>
+                <div class="item username">Created by {{userName}} </div><a href="/user/posts/edit/{{_id}}" class="editPost">Edit Post</a>
                 <div class="item locationName">{{locationName}}, {{city}}</div>
+                <div class="deletePost">
+                    <form action="/user/myposts/{{_id}}?_method=DELETE" method="post">
+                        <button type="submit" class="deleteBtn">Delete Post</button>
+                    </form>
+                </div>
                 <div class="item locationDetails">{{locationDetails}}</div>
             </div>
+            
         {{/each}}
     {{else}}
         <p style="margin-bottom: 404.5px;">No Posts to show</p>
