--- a/views/user/user-posts.handlebars
+++ b/views/user/user-posts.handlebars
@@ -8,9 +8,9 @@
         {{#each posts}}
 
             <div class="post">
-                <div class="item like"><span class="likeIcon material-symbols-outlined">thumb_up</span></div>
-                <div class="item likeCount">{{likeCount}}</div>
-                <div class="item dislike"><span class="dislikeIcon material-symbols-outlined">thumb_down</span></div>
+                <div class="item like"><span class="likeIcon material-symbols-outlined" onclick="like('{{_id}}', '{{city}}')">thumb_up</span></div>
+                <div class="item likeCount" id="{{_id}}">{{likeCount}}</div>
+                <div class="item dislike"><span class="dislikeIcon material-symbols-outlined" onclick="dislike('{{_id}}', '{{city}}')">thumb_down</span></div>
                 <div class="item username">Created by {{userName}}</div>
                 <div class="item locationName">{{locationName}}, {{city}}</div>
                 <div class="item locationDetails">{{locationDetails}}</div>
@@ -20,3 +20,24 @@
         <p style="margin-bottom: 404.5px;">No Posts to show</p>
     {{/if}}
 </div>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script type="text/javascript">
+    
+
+    function like(id, city){
+        const likeCount = document.getElementById(`${id}`)
+        axios.put(`/user/posts/${id}/like`, {id, increment: 1, city}).then( function(response) {
+            const updatedPost = response.data
+            likeCount.textContent = updatedPost.likeCount
+        })
+    }
+    function dislike(id, city){
+        const likeCount = document.getElementById(`${id}`)
+        axios.put(`/user/posts/${id}/dislike`, {id, increment: -1, city}).then(function(response){
+            const updatedPost = response.data
+            likeCount.textContent = updatedPost.likeCount
+        })
+    }
+
+
+</script>
