--- a/views/layouts/home.handlebars
+++ b/views/layouts/home.handlebars
@@ -10,8 +10,9 @@
 <body>
 
 {{> home/home-header}}
-
-    {{{body}}}
+    <div class="body">
+        {{{body}}}
+    </div>
 
 {{> home/home-footer}}
 
