--- a/public/css/index.css
+++ b/public/css/index.css
@@ -5,6 +5,13 @@
     padding: 0;
     font-family: "Montserrat", sans-serif;
 }
+.body{
+    min-height: 463px;
+    display: relative;
+
+
+    
+}
 header h2{
     font-size: 30px;
 }
@@ -66,7 +73,7 @@ footer{
     width: 100%;
     height: 50px;
     background-color: #00ABE4;
-    position:static;
+    position: static;
     bottom: 0px;
     color: white;
     display: flex;
@@ -93,13 +100,13 @@ footer img{
     margin-left: 0;
 }
 .container{
-    width:90%;
-    margin: 10px auto;
+    width:100%;
+    margin: 0 0;
     z-index: 1;
 }
 .carousel{
-    border: 2px solid black;
-    height: 600px;
+    /* border: 2px solid black; */
+    height: 700px;
     position: relative;
     overflow: hidden;
     z-index: 1;
@@ -375,12 +382,12 @@ body .wrapper{
     display: flex;
     width: 100%;
     height: 150px;
-    border: 2px solid black;
+    /* border: 2px solid black; */
     justify-content: center;
     
     align-items: center;
     flex-direction: column;
-    margin: 0 0 5% 0%;
+    margin: 0 0 0 0%;
     background-color: #72aee6;
     background-size: cover;
     color: white;
